Added flux implementation

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <title>To do App - Ajio Reliance</title>
+    <title>To do App</title>
 </head>
 <body>
     <div id="container"></div>
